<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<ajit.browser.lightning.nightmode.themed.ThemedTextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_fragment_fake_input"
    android:layout_width="@dimen/fake_input_width"
    android:layout_height="@dimen/fake_input_height"
    style="@style/Body1"
    android:gravity="center"
    android:background="@drawable/urlbar_background"
    android:text="@string/urlbar_hint"
    android:textColor="@color/fake_input_text"/>