<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<ajit.browser.lightning.nightmode.themed.ThemedRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tab_tray_item_height"
    android:background="@drawable/tab_tray_item_bkg"
    android:outlineProvider="background"
    android:elevation="1dp"
    android:layout_marginBottom="@dimen/tab_tray_item_space"
    tools:ignore="contentDescription">
    <ImageView
        android:id="@+id/website_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/tabTrayItemIconBackground"
        android:src="@drawable/favicon_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/website_icon"
        android:layout_toStartOf="@+id/close_button"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <ajit.browser.lightning.nightmode.themed.ThemedTextView
            style="@style/Body2"
            android:id="@+id/website_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:textColor="@color/tab_tray_item_title"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            tools:text="website_title" />
        <ajit.browser.lightning.nightmode.themed.ThemedTextView
            style="@style/Body5"
            android:id="@+id/website_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/tab_tray_item_subtitle"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            tools:text="website_subtitle" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/close_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">
        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/action_close_tab" />
    </FrameLayout>
</ajit.browser.lightning.nightmode.themed.ThemedRelativeLayout>