...
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    Shark Browser<string name="mozilla" translatable="false">Shark Browser</string>
    <string name="firefox" translatable="false">Shark Browser</string>
    <string name="mpl" translatable="false">Shark Browser Public License</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_cancel">CANCEL</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_ok">OK</string>

    <!-- This text is shown in the URL bar when it's empty -->
    <string name="urlbar_hint">Search or enter address</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
...
