<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/fixed_menu_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal|bottom">

    <ajit.browser.focus.widget.EqualDistributeGrid
        android:id="@+id/browser_screen_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/browser_fixed_menu_horizontal_margin"
        android:layout_marginStart="@dimen/browser_fixed_menu_horizontal_margin">

        <ajit.browser.focus.tabs.TabCounter
            android:id="@+id/btn_tab_tray"
            style="@style/MainMenuButton"
            app:drawableColor="@color/browser_menu_button"/>

        <include layout="@layout/button_open_new_tab" />

        <include layout="@layout/button_search" />

        <include layout="@layout/button_capture" />

        <include layout="@layout/button_more" />
    </ajit.browser.focus.widget.EqualDistributeGrid>
</FrameLayout>
